--- a/angular.json
+++ b/angular.json
@@ -32,7 +32,10 @@
             "styles": [
               "src/assets/styles/index.scss"
             ],
-            "scripts": []
+            "scripts": [
+              "./node_modules/jquery/dist/jquery.min.js",
+              "./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
+            ]
           },
           "configurations": {
             "production": {
